--- a/fluent.conf
+++ b/fluent.conf
@@ -1,10 +1,8 @@
 <source>
-  type forward
-  port 24224
-  bind 0.0.0.0
+	type forward
+	port 24224
+	bind 0.0.0.0
 </source>
 
-<match *.*>
-    type loggly
-    loggly_url "https://logs-01.loggly.com/inputs/#{ENV['LOGGLY_TOKEN']}/tag/fluentd"
-</match>
+@include /home/fluent/fluentd/*.conf
+
