--- a/fluent.conf
+++ b/fluent.conf
@@ -4,5 +4,11 @@
 	bind 0.0.0.0
 </source>
 
-@include /home/fluent/fluentd/*.conf
+<match **>
+	@type forest
+	subtype loggly
+	<template>
+		loggly_url https://logs-01.loggly.com/inputs/#LOGGLY_TOKEN/tag/${tag}
+	</template>
+</match>
 
